completed notes;; except that one bug because the first note has a z index below the new note, so the new note also detects the mouse click; can fix by having the startDrag function increase the z-index style of whatever ntoe is clicked

--- a/styles/style.css
+++ b/styles/style.css
@@ -93,7 +93,7 @@ main {
 .draggable {
     position: absolute;
     cursor: grab;
-    width: 10em;
+    width: 20em;
     height: 2em;
 
     background-color: var(--tag-def-color);
@@ -110,12 +110,21 @@ main {
 .note {
     position: inherit;
     cursor: text;
-    width: inherit;
-    height: 8em;
+    width: 18em;
+    height: 12em;
     margin-top: 2em;
+    padding-left: 1em;
+    padding-right: 1em;
+
+    color: black;
+    font-weight: bold;
 
     background-color: var(--note-def-color);
     box-shadow: 0px 10px 1em black;
     border-bottom-left-radius: 1em;
     border-bottom-right-radius: 1em;
+}
+
+.note:focus {
+    outline: none;
 }
